init blog project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - MONGO_URI=mongodb://mongo:27017
       - DB_NAME=blog
       - JWT_SECRET=change-this-to-a-real-secret-key
-    depends_on:
-      - mongo
+    # depends_on:
+    #   - mongo
     restart: unless-stopped
 
   frontend:
