--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY package.json ./
 RUN npm install
 COPY . .
+ENV NEXT_PUBLIC_API_URL=http://backend:8000
 RUN npm run build
 EXPOSE 3000
 CMD ["npm", "start"]
